# 41068RS12025-Group18

./: .gitignore  Drone_UI.ui  LICENSE  README.md  drone_ui_code3.py  h origin --tags
41068_ignition_bringup/config/: gazebo_bridge.yaml  nav2_params.yaml  slam_params.yaml
41068_ignition_bringup/launch/: 41068_ignition.launch.py  41068_ignition_drone.launch.py
41068_ignition_bringup/urdf_drone/: parrot.gazebo.xacro  parrot.urdf.xacro
41068_ignition_bringup/worlds/: Plantation2.sdf  Plantation2Obs.sdf  Plantation2Obs.sdf:Zone.Identifier  PlantationTest.sdf
drone_controller/: CMakeLists.txt  package.xml
drone_controller/src/: drone_controller.cpp  mission_node.cpp
drone_ui/: package.xml
drone_ui/drone_ui/: drone_ui_code.py  drone_ui_node.py
install/: local_setup.sh  setup.sh
install/41068_ignition_bringup/lib/41068_ignition_bringup/: drone_mission_composed
install/41068_ignition_bringup/share/41068_ignition_bringup/: local_setup.sh  package.dsv  package.ps1  package.sh  safety_monitor.h
install/41068_ignition_bringup/share/41068_ignition_bringup/cmake/: ament_cmake_export_dependencies-extras.cmake  export_mission_componentsExport.cmake
install/41068_ignition_bringup/share/41068_ignition_bringup/config/: map.yaml  waypoints.yaml
install/41068_ignition_bringup/share/41068_ignition_bringup/launch/: rs1_robot_ignition.py  rs1_robot_rviz.py  rs1_single_drone.py
install/41068_ignition_bringup/share/41068_ignition_bringup/urdf/model/: model.config
install/drone_ignition_bringup/lib/drone_ignition_bringup/: drone_mission_composed
install/drone_ignition_bringup/share/drone_ignition_bringup/: local_setup.dsv  mission_node.h  package.bash  package.dsv  package.ps1  package.sh  package.zsh  pid.h
install/drone_ignition_bringup/share/drone_ignition_bringup/cmake/: export_mission_componentsExport-noconfig.cmake
install/drone_ignition_bringup/share/drone_ignition_bringup/config/: gazebo_bridge.yaml  nav2_params.yaml
install/drone_ignition_bringup/share/drone_ignition_bringup/launch/: rs1_drone_spawner.py  rs1_robot_ignition.py  rs1_robot_rviz.py
install/drone_ignition_bringup/share/drone_ignition_bringup/urdf/: rs1_drone.urdf  rs1_drone.urdf.xacro
install/rs1_robot/lib/rs1_robot/: drone_mission_composed
install/rs1_robot/share/ament_index/resource_index/rclcpp_components/: rs1_robot
install/rs1_robot/share/rs1_robot/: drone_control.h  drone_node.h  local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  sensor_manager.h  waypoint_nav_node.h
install/rs1_robot/share/rs1_robot/cmake/: export_mission_componentsExport.cmake
install/rs1_robot/share/rs1_robot/config/: drone.yaml
install/rs1_robot/share/rs1_robot/launch/: rs1_drone_spawner.py  rs1_robot_world.py
install/rs1_robot/share/rs1_robot/mission/: state_machine.h
install/rs1_robot/share/rs1_robot/worlds/: simple_trees_builtin.sdf
lidar-tree-detector/: CMakeLists.txt  setup.py
lidar-tree-detector/lidar_tree_detector/: __init__.py  data_processing.py  lidar_tree_detector_node.py  tree_detection.py  utils.py
lidar-tree-detector/src/: lidar_tree_detector_node.cpp
lidar-tree-detector/tests/: test_data_processing.py  test_tree_detection.py  test_utils.py
lidar_tree_detector/: CMakeLists.txt  package.xml
lidar_tree_detector/src/: lidar_tree_detector_node.cpp
log/: latest_build
src/drone_ignition_bringup/: CMakeLists.txt  package.xml
src/drone_ignition_bringup/config/: rs1_robot_config.rviz  waypoints.yaml
src/drone_ignition_bringup/include/: drone_control.h  drone_node.h  mission_node.h  mission_state.h  pid.h  safety_monitor.h  sensor_manager.h
src/drone_ignition_bringup/include/mission/: mission_executor.h  path_planner.h
src/drone_ignition_bringup/launch/: rs1_robot_world.py  rs1_single_drone.py
src/drone_ignition_bringup/models/: sjtu_drone.sdf
src/drone_ignition_bringup/src/: drone_control.cpp  drone_node.cpp  main.cpp  main_composition.cpp  mission_executor.cpp  mission_node.cpp  path_planner.cpp  pid.cpp  state_machine.cpp  waypoint_nav_node.cpp
src/drone_ignition_bringup/worlds/: simple_test.world
src/log/: latest_list
tree_trunk_detector/: CMakeLists.txt  package.xml  test_utils.py  utils.py
tree_trunk_detector/include/tree_trunk_detector/: trunk_detector.hpp
tree_trunk_detector/src/: trunk_detector.cpp  trunk_detector_node.cpp
